@@ -1,3 +1,4 @@
+import os
 import sys
 import time
 import unittest
@@ -24,6 +25,27 @@ class Test(WriteReadTest):
         eventlogging - Read one classic event
         """
         msg = "Hello world!"
+        self.write_event_log(msg)
+        evts = self.read_events()
+        self.assertTrue(len(evts), 1)
+        self.assert_common_fields(evts[0], msg=msg)
+
+    def test_resume_reading_events(self):
+        """
+        eventlogging - Resume reading events
+        """
+        msg = "First event"
+        self.write_event_log(msg)
+        evts = self.read_events()
+        self.assertTrue(len(evts), 1)
+        self.assert_common_fields(evts[0], msg=msg)
+
+        # remove the output file, otherwise there is a race condition
+        # in read_events() below where it reads the results of the previous
+        # execution
+        os.unlink(os.path.join(self.working_dir, "output", self.beat_name))
+
+        msg = "Second event"
         self.write_event_log(msg)
         evts = self.read_events()
         self.assertTrue(len(evts), 1)
@@ -178,7 +200,7 @@ class Test(WriteReadTest):
         evts = self.read_events()
         self.assertTrue(len(evts), 1)
 
-        event_logs = self.read_registry()
+        event_logs = self.read_registry(requireBookmark=False)
         self.assertTrue(len(event_logs.keys()), 1)
         self.assertIn(self.providerName, event_logs)
         record_number = event_logs[self.providerName]["record_number"]
