@@ -93,10 +93,9 @@ class WriteReadTest(BaseTest):
         proc = self.start_beat()
         self.wait_until(lambda: self.output_has(expected_events))
         proc.check_kill_and_wait()
-
         return self.read_output()
 
-    def read_registry(self):
+    def read_registry(self, requireBookmark=False):
         f = open(os.path.join(self.working_dir, "data", ".winlogbeat.yml"), "r")
         data = yaml.load(f)
         self.assertIn("update_time", data)
@@ -107,6 +106,8 @@ class WriteReadTest(BaseTest):
             self.assertIn("name", event_log)
             self.assertIn("record_number", event_log)
             self.assertIn("timestamp", event_log)
+            if requireBookmark:
+                self.assertIn("bookmark", event_log)
             name = event_log["name"]
             event_logs[name] = event_log
 
@@ -114,7 +115,8 @@ class WriteReadTest(BaseTest):
 
     def assert_common_fields(self, evt, msg=None, eventID=10, sid=None,
                              level="Information", extra=None):
-        assert evt["computer_name"].lower() == platform.node().lower()
+
+        assert host_name(evt["computer_name"]).lower() == host_name(platform.node()).lower()
         assert "record_number" in evt
         self.assertDictContainsSubset({
             "event_id": eventID,
@@ -143,3 +145,7 @@ class WriteReadTest(BaseTest):
 
         if extra != None:
             self.assertDictContainsSubset(extra, evt)
+
+
+def host_name(fqdn):
+    return fqdn.split('.')[0]
